--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -4,6 +4,8 @@
   description: "Une piétonnisation au cœur du Plateau-Mont-Royal"
   location: "Plateau-Mont-Royal, Montréal, QC"
   date: "Été et Automne 2017"
+  start-date: "2017"
+  end-date: "2017"
   image: "/assets/images/projects/Roy/Roy2.jpg"
   url: "project1"
   fundings: "Bourse CRSH-SDP"
@@ -21,34 +23,36 @@
   before:
     image: '/assets/images/projects/Roy/Roy1.jpg'
     credits: 'Maryse Lavoie'
-    alt: ""
+    alt: "Terrasses Roy - avant - à gauche"
   after:
     image: '/assets/images/projects/Roy/Roy2.jpg'
-    credits: 'Maryse Lavoie'
-    alt: ""
+    credits: 'Christine Kerrigan'
+    alt: "et après - à droite"
   brief: "Le projet a permis d'éliminer le bruit de la circulation et de créer une nouvelle voie piétonne et un espace de détente dans un lieu où il n'y avait auparavant qu'une rue.<br><br>Il a également permis la formation d’un nouvel espace de rencontre dans le quartier, souvent utilisé à la fois par les résidents et par les visiteurs, qui en apprécient la verdure, le sentiment accru de sécurité dû à l'absence de voitures et le paysage sonore plus « calme » avec la circulation audible uniquement au loin."
   about: "En collaboration avec la Ville de Montréal, notre équipe a mené un projet de recherche sur l’environnement sonore de la rue Roy, au cœur de l'arrondissement du Plateau-Mont-Royal, lors de sa piétonnisation. Durant l’été 2017, la Ville a fermé à la circulation une section de la rue et mandaté la firme de design Castor et Pollux pour concevoir et installer un aménagement temporaire. Quatre secteurs différents et colorés invitaient les visiteurs à se détendre et à interagir, avec un mobilier urbain coloré, des jardins communautaires et une aire de jeux. Ce projet pilote a très bien été accueilli par la communauté et a été prolongé pendant l'automne et l'hiver 2017. L'espace a maintenant été converti en un espace de rencontre extérieur permanent autour de l'agriculture urbaine."
   participation: "Nous avons participé à des consultations publiques et effectué des mesures acoustiques et des enregistrements audio avant et après la piétonnisation. Nous avons également distribué des questionnaires aux passants afin d'évaluer leur expérience de cette nouvelle voie piétonne, en mettant l'accent sur l’ambiance sonore et les attentes sonores. Nous avons ensuite formulé des recommandations pour la municipalité sur les manières de renforcer la vocation de ce nouvel espace par le biais du son."
   contact_info: "Pour plus de détails, veuillez contacter : Daniel Steele, Catherine Guastavino"
   links:
-    - url: 'electronslibres.telequebec.tv/episodes/35418'
-      name: 'Électrons Libres - Terrasses Roy'
-    - url: 'montreal.ca/en/places/terrasses-roy'
-      name: 'Ville de Montréal - Terrasses Roy'
-    - url: 'montreal.ca/en/places/terrasses-roy-6507'
-      name: 'Ville de Montréal - Terrasses Roy (6507)'
+    - url: 'https://electronslibres.telequebec.tv/episodes/35418'
+      name: 'https://electronslibres.telequebec.tv/episodes/35418'
+    - url: 'https://montreal.ca/en/places/terrasses-roy'
+      name: 'https://montreal.ca/en/places/terrasses-roy'
+    - url: 'https://montreal.ca/articles/les-terrasses-roy-6507'
+      name: 'https://montreal.ca/articles/les-terrasses-roy-6507'
   publications:
     - url: ''
-      name: 'Bockstael A., Steele D., Trudeau C., Guastavino, C. (2019). Forever young: L’âge est-il important dans la conception du paysage sonore urbain ? Article invité, Proceedings of the 26th International Congress on Sound and Vibration (ICSV26), Montréal, QC, du 7 au 11 juillet'
+      name: 'Bockstael A., Steele D. Trudeau C., Guastavino, C. (2019). Forever young: Is age of importance in urban soundscape design? Invited paper, Proceedings of the 26th International Congress on Sound and Vibration (ICSV26), Montréal, QC, July 7–11'
   prev_url: "project1"
   next_url: 'project2'
 
 
 
 - title: "Lignes directrices sur la politique du bruit : Valeurs Guides"
-  description: "Un projet sur la gestion du bruit environnemental au Québec et à l'international "
+  description: "Un projet sur la gestion du bruit environnemental au Québec et à l'international"
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "2018 - 2023"
+  start-date: "2018"
+  end-date: "2023"
   image: "/assets/images/projects/ValeursGuide/SoundLevelMeterRoy_ChristineKerrigan.jpg"
   url: "project2"
   fundings: "Ministères de la Santé et de l’Environnement au Québec : Ministère de la Santé et des services sociaux (MSSS) et Ministère du Développement durable, de l’Environnement et de la Lutte contre les changements climatiques (MDDELCC)."
@@ -103,6 +107,8 @@
   description: "Résultats de l'ajout de structures d'eau dans une place publique"
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Été 2018"
+ start-date: "2018"
+  end-date: "2018"
   image: "/assets/images/projects/Fleurs de Macadam sound art/Val_IMG_20190726_183158.jpg"
   url: "project3"
   fundings: "Bourse CRSH-SDP"
@@ -142,6 +148,8 @@
   description: "Organiser des ateliers pour aider à déterminer les besoins des professionnel·les en matière de technologies"
   location: ""
   date: "Été 2019"
+  start-date: "2019"
+  end-date: "2019"
   image: "/assets/images/projects/Street Performances and the Quality of Urban Public Space/Musician in the park.png"
   url: "project4"
   fundings: "Bourse CRSH-SDP"
@@ -186,6 +194,8 @@
   description: "Projets locaux et mondiaux visant à améliorer la façon dont nous évaluons les ambiances sonores dans différentes langues"
   location: ""
   date: "2015 – En cours"
+  start-date: "2015"
+  end-date: "En cours"
   image: "/assets/images/projects/translation/TranslationCCommons.jpeg"
   url: "project5"
   fundings: "SSHRC-PDG grant"
@@ -230,6 +240,8 @@
   description: "Améliorer l’environnement sonore des restaurants"
   location: ""
   date: "Été 2015 ; Automne 2020 – Hiver 2021"
+  start-date: "2015"
+  end-date: "2021"
   image: "/assets/images/projects/restaurant/restaurant-ithq-sherbrooke-montreal-14.jpg"
   url: "project6"
   fundings: "ITHQ, Saint-Gobain Research"
@@ -270,6 +282,10 @@
   description: "Développer des technologies avec, et pour, les professionnel·les en urbanisme"
   location: ""
   date: "Printemps 2019 – Été 2019"
+    start-date: "2019"
+  end-date: "2019"
+  start-date: ""
+  end-date: ""
   image: "/assets/images/projects/Codesign sketch pad/DSC_1272.jpeg"
   url: "project7"
   fundings: "CRSH, bourse doctorale FRQSC"
@@ -316,6 +332,8 @@
   description: "Un aperçu du silence que nous pensions souhaiter"
   location: ""
   date: "2020 - 2023"
+  start-date: "2020"
+  end-date: "2023"
   image: "/assets/images/projects/COVID19/QDSlockdown.jpg"
   url: "project8"
   fundings: "Programme MITACS Accélération avec le Quartier des spectacles"
@@ -362,6 +380,8 @@
   description: "Une investigation des facteurs qui façonnent les expériences sonores en milieu urbain"
   location: ""
   date: "2015 – 2021"
+  start-date: "2015"
+  end-date: "2021"
   image: "/assets/images/projects/context matters/962-Mont-Royal-intervention.jpg"
   url: "project9"
   fundings: "CRSH"
@@ -406,6 +426,8 @@
   description: "Faire progresser l'analyse et l’élaboration de politiques grâce à des outils de planification solides"
   location: "Montréal, Canada; Venise, Italie"
   date: "2021 - En cours"
+  start-date: "2021"
+  end-date: "En cours"
   image: "/assets/images/projects/soninurb/Soninurb.jpg"
   url: "project10"
   fundings: "Horizon Europe 2020 Programme européen pour la recherche et l’innovation - Bourse Marie Sklodowska-Curie"
@@ -452,6 +474,8 @@
   description: "Recherche sur la cohabitation sonore dans les rues piétonnes durant la COVID-19"
   location: "Montréal, Canada"
   date: "Printemps 2021 – Printemps 2022"
+  start-date: "2021"
+  end-date: "2022"
   image: "/assets/images/projects/recreation v residence/IMG_1848_QdS_CreditsFXFeron.JPG"
   url: "project11"
   fundings: "MITACS Programme Accélération avec la Ville de Montréal"
@@ -498,6 +522,8 @@
   description: "Etudier la cohabitation sonore autour du port de Montréal"
   location: "Montréal, Canada"
   date: "Printemps 2022 – Printemps 2023; Printemps 2024 – Printemps 2025"
+  start-date: "2022"
+  end-date: "2025"
   image: "/assets/images/projects/industry v residence/Port-port.jpeg"
   url: "project12"
   fundings: "2 Programmes d'accélération de MITACS avec la Ville de Montréal"
@@ -548,6 +574,8 @@
   description: "Prendre en compte le sonore dans la politique de la vie nocturne à Montréal"
   location: ""
   date: "Printemps 2021 – Printemps 2023"
+  start-date: "2021"
+  end-date: "2023"
   image: "/assets/images/projects/nightlife/MITACS_ListenUp_Oct6_2022Workshop.jpg"
   url: "project13"
   fundings: "MITACS Programme Accélération avec la Ville de Montréal"
@@ -608,6 +636,8 @@ Ville sonore a entamé une collaboration avec la Ville de Montréal et la Direct
   description: "Comprendre les paysages sonores des festivals montréalais"
   location: "Montréal, QC"
   date: "Hiver 2020 – Hiver 2021"
+  start-date: "2020"
+  end-date: "2021"
   image: "/assets/images/projects/nightlife/QDS.jpg"
   url: "project14"
   fundings: "MITACS programme Accélération avec le Partenariat du Quartier des spectacles, CRSH – subvention de développement de partenariats"
@@ -658,6 +688,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Informer la conception de l'art sonore dans un espace public parisien grâce à des simulations de paysage sonore"
   location: "Paris, France"
   date: "2021 – En cours"
+  start-date: "2021"
+  end-date: "En cours"
   image: "/assets/images/projects/niches/niches_acoustiques.jpg"
   url: "project15"
   fundings: "SSHRC PDF, McGill’s Graduate Mobility Award"
@@ -706,6 +738,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
     - "Une collaboration arts-science va permettre d’informer la composition de l'installation sonore, en partant d’enregistrements sur le terrain, de simulations du paysage sonore pour finir avec des enquêtes sur le terrain auprès des résidents."
   location: "Montreal, QC"
   date: "2023-en cours"
+  start-date: "2023"
+  end-date: "en cours"
   image: "/assets/images/projects/les_madelinennes/les_madelinennes.jpg"
   url: "project16"
   fundings: "SSHRC"
@@ -753,6 +787,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Une exploration des qualités sensorielles des bâtiments d'église en dehors du contexte du culte"
   location: "Montréal, QC"
   date: "Automne 2021 – Automne 2022"
+  start-date: "2021"
+  end-date: "2022"
   image: "/assets/images/projects/Church Restoration/ChurchRestor_RussianOrth_IMG_1865.JPG"
   url: "project17"
   fundings: "Fonds de recherche du Québec – Société et culture (FRQSC), Postdoctoral Fellowship"
@@ -803,6 +839,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Intégrer la musique dans l'espace public grâce à un système sonore interactif"
   location: "Parc du Portugal, Montreal, QC"
   date: "2014 - Été 2015"
+  start-date: "2014"
+  end-date: "2015"
   image: "/assets/images/projects/Musikiosk/MusikioskAd.png"
   url: "project18"
   fundings: "McGill Dean of Arts Development Fund"
@@ -856,6 +894,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Adopter une approche de création de recherche participative pour améliorer le paysage sonore d'un espace public urbain"
   location: "Plateau-Mont-Royal, Montreal, QC"
   date: "Été 2018 – En cours"
+  start-date: "2018"
+  end-date: "En cours"
   image: "/assets/images/projects/Fleurs de Macadam sound art/Place_Fleurs_des_Macadam_8.jpg"
   url: "project19"
   fundings: "SSHRC"
@@ -900,6 +940,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Utiliser les promenades sonores immersives pour encourager la sensibilisation au son et l'empathie parmi les professionels et le grand public"
   location: "Boston, Montréal, Amsterdam"
   date: "2013 – En cours"
+  start-date: "2013"
+  end-date: "En cours"
   image: "/assets/images/projects/Soundwalks/DSC_0142.jpg"
   url: "project20"
   fundings: ""
@@ -949,6 +991,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Les stratégies visant à mobiliser les connaissances liées au sonore dans la pratique et le discours public"
   location: ""
   date: "2013 - en cours"
+  start-date: "2013"
+  end-date: "en cours"
   image: "/assets/images/projects/Engaging professionals/DSC_0204 (1).jpg"
   url: "project21"
   fundings: ""
@@ -1000,6 +1044,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "L'exposition au bruit à long terme diffère selon les groupes socio-économiques"
   location: ""
   date: "2020 - En cours"
+  start-date: "2020"
+  end-date: "En cours"
   image: "/assets/images/projects/sonic injustice/Railyards.jpg"
   url: "project22"
   fundings: "Bourse doctorale du FRQSC"
@@ -1040,7 +1086,9 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
     accessibles qui tiennent compte de l'expérience auditive plus large des
     usager·ères de la ville
   location: ""
-  date: 2018 - en cours
+  date: "2018 - en cours"
+  start-date: "2018"
+  end-date: "En cours"
   image: /assets/images/projects/City Ditty/CityDitty-Cafe.png
   url: project23
   fundings: "Ce projet a été soutenu d'une manière ou d'une autre par les trois
@@ -1153,6 +1201,8 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
   description: "Contextualiser les enjeux sonores urbains pour le grand public à travers des bandes dessinées"
   location: "Montréal"
   date: "Automne 2023 - Printemps 2024"
+  start-date: "2023"
+  end-date: "2024"
   image: "/assets/images/projects/illustrating soundscape/IMG_1367.jpeg"
   url: "project24"
   fundings: "Dialogue FRQ"
@@ -1199,6 +1249,9 @@ Ville sonore s'est associée au Partenariat du Quartier des spectacles (l'organi
 
 - title: "De chez vous à votre espace vert local ; Qu'entendez-vous en chemin ?"
   description: "Paysage sonore de l'accès piéton aux espaces verts, Une approche de cartographie participative"
+    date: "2023 - Ongoing"
+  start-date: "2023"
+  end-date: "en cours"
   tags: 
     - name: "paysage sonore"
       id: "paysage_sonore"
